--- a/public/output.css
+++ b/public/output.css
@@ -528,12 +528,24 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.inline{
+  display: inline;
+}
+
 .flex{
   display: flex;
 }
 
 .grid{
   display: grid;
+}
+
+.hidden{
+  display: none;
+}
+
+.h-\[40px\]{
+  height: 40px;
 }
 
 .h-\[60px\]{
@@ -544,32 +556,28 @@ video {
   height: 80px;
 }
 
-.h-\[30px\]{
-  height: 30px;
+.h-5{
+  height: 1.25rem;
 }
 
-.h-\[40px\]{
-  height: 40px;
+.h-10{
+  height: 2.5rem;
 }
 
-.h-7{
-  height: 1.75rem;
-}
-
-.h-14{
-  height: 3.5rem;
+.h-12{
+  height: 3rem;
 }
 
 .h-\[\]{
   height: ;
 }
 
-.h-\[20px\]{
-  height: 20px;
+.h-\[100px\]{
+  height: 100px;
 }
 
-.h-\[200px\]{
-  height: 200px;
+.h-\[50px\]{
+  height: 50px;
 }
 
 .w-\[490px\]{
@@ -584,6 +592,14 @@ video {
   width: 100%;
 }
 
+.w-3\/4{
+  width: 75%;
+}
+
+.w-\[40px\]{
+  width: 40px;
+}
+
 .w-\[150px\]{
   width: 150px;
 }
@@ -592,20 +608,36 @@ video {
   width: 400px;
 }
 
-.w-\[30px\]{
-  width: 30px;
+.w-5{
+  width: 1.25rem;
 }
 
-.w-\[40px\]{
-  width: 40px;
+.w-10{
+  width: 2.5rem;
 }
 
-.w-3\/4{
-  width: 75%;
+.w-12{
+  width: 3rem;
 }
 
-.w-3{
-  width: 0.75rem;
+.w-14{
+  width: 3.5rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
+.w-\[200px\]{
+  width: 200px;
+}
+
+.w-\[250px\]{
+  width: 250px;
 }
 
 .cursor-pointer{
@@ -618,6 +650,14 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-col-reverse{
+  flex-direction: column-reverse;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-start{
@@ -634,10 +674,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-around{
-  justify-content: space-around;
 }
 
 .gap-10{
@@ -660,6 +696,14 @@ video {
   gap: 0.25rem;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -672,16 +716,12 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
+.border-4{
+  border-width: 4px;
 }
 
 .border-2{
   border-width: 2px;
-}
-
-.border-4{
-  border-width: 4px;
 }
 
 .border-b-8{
@@ -715,6 +755,10 @@ video {
 .bg-neutral-1000{
   --tw-bg-opacity: 1;
   background-color: rgb(217 217 217 / var(--tw-bg-opacity));
+}
+
+.p-5{
+  padding: 1.25rem;
 }
 
 .px-32{
@@ -772,6 +816,81 @@ video {
   padding-right: 1rem;
 }
 
+.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-14{
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-11{
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
+}
+
+.px-9{
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-\[\]{
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[6px\]{
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
 .pl-14{
   padding-left: 3.5rem;
 }
@@ -786,6 +905,14 @@ video {
 
 .pb-1{
   padding-bottom: 0.25rem;
+}
+
+.pl-3{
+  padding-left: 0.75rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-body{
@@ -821,6 +948,31 @@ video {
   line-height: 2rem;
 }
 
+.text-\[20px\]{
+  font-size: 20px;
+}
+
+.text-\[8px\]{
+  font-size: 8px;
+}
+
+.text-\[5px\]{
+  font-size: 5px;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-\[10px\]{
+  font-size: 10px;
+}
+
+.text-\[9px\]{
+  font-size: 9px;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -837,6 +989,14 @@ video {
   line-height: 1.25rem;
 }
 
+.leading-\[\]{
+  line-height: ;
+}
+
+.leading-\[29px\]{
+  line-height: 29px;
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -845,6 +1005,10 @@ video {
 .text-indigo-950{
   --tw-text-opacity: 1;
   color: rgb(67 70 231 / var(--tw-text-opacity));
+}
+
+.text-\[\]{
+  color: ;
 }
 
 .transition{
@@ -874,4 +1038,228 @@ video {
 .hover\:border-indigo-950:hover{
   --tw-border-opacity: 1;
   border-color: rgb(67 70 231 / var(--tw-border-opacity));
+}
+
+.hover\:bg-neutral-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 82 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-indigo-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-indigo-1000:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(142 143 224 / var(--tw-bg-opacity));
+}
+
+.hover\:text-neutral-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:block{
+    display: block;
+  }
+
+  .md\:flex{
+    display: flex;
+  }
+
+  .md\:grid{
+    display: grid;
+  }
+
+  .md\:hidden{
+    display: none;
+  }
+
+  .md\:h-\[60px\]{
+    height: 60px;
+  }
+
+  .md\:h-\[80px\]{
+    height: 80px;
+  }
+
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
+  .md\:w-\[490px\]{
+    width: 490px;
+  }
+
+  .md\:w-\[150px\]{
+    width: 150px;
+  }
+
+  .md\:w-\[400px\]{
+    width: 400px;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:flex-col{
+    flex-direction: column;
+  }
+
+  .md\:items-start{
+    align-items: flex-start;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:gap-10{
+    gap: 2.5rem;
+  }
+
+  .md\:gap-2{
+    gap: 0.5rem;
+  }
+
+  .md\:gap-5{
+    gap: 1.25rem;
+  }
+
+  .md\:gap-4{
+    gap: 1rem;
+  }
+
+  .md\:rounded-xl{
+    border-radius: 0.75rem;
+  }
+
+  .md\:rounded-none{
+    border-radius: 0px;
+  }
+
+  .md\:px-\[118px\]{
+    padding-left: 118px;
+    padding-right: 118px;
+  }
+
+  .md\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:px-36{
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .md\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .md\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:px-20{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .md\:pl-14{
+    padding-left: 3.5rem;
+  }
+
+  .md\:pr-3{
+    padding-right: 0.75rem;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-\[40px\]{
+    font-size: 40px;
+  }
+
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:font-medium{
+    font-weight: 500;
+  }
+
+  .md\:font-semibold{
+    font-weight: 600;
+  }
+
+  .md\:leading-5{
+    line-height: 1.25rem;
+  }
+
+  .md\:leading-\[56px\]{
+    line-height: 56px;
+  }
 }
