--- a/public/output.css
+++ b/public/output.css
@@ -515,6 +515,26 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute{
+  position: absolute;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.top-\[-400px\]{
+  top: -400px;
+}
+
+.top-\[80px\]{
+  top: 80px;
+}
+
+.z-\[-1\]{
+  z-index: -1;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -526,6 +546,30 @@ video {
 
 .mb-3{
   margin-bottom: 0.75rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
@@ -620,6 +664,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -630,6 +678,10 @@ video {
 
 .rounded-2xl{
   border-radius: 1rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .border-4{
@@ -658,6 +710,11 @@ video {
   border-color: rgb(18 18 18 / var(--tw-border-opacity));
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-indigo-950{
   --tw-bg-opacity: 1;
   background-color: rgb(67 70 231 / var(--tw-bg-opacity));
@@ -673,8 +730,17 @@ video {
   background-color: rgb(217 217 217 / var(--tw-bg-opacity));
 }
 
+.bg-indigo-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 46 129 / var(--tw-bg-opacity));
+}
+
 .p-5{
   padding: 1.25rem;
+}
+
+.p-\[-400px\]{
+  padding: -400px;
 }
 
 .px-8{
@@ -687,14 +753,14 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .px-10{
@@ -722,6 +788,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.pl-7{
+  padding-left: 1.75rem;
+}
+
 .pl-3{
   padding-left: 0.75rem;
 }
@@ -738,6 +808,10 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pt-10{
+  padding-top: 2.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -746,29 +820,22 @@ video {
   font-family: Jost;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-\[6px\]{
-  font-size: 6px;
-}
-
-.text-\[8px\]{
-  font-size: 8px;
 }
 
 .text-\[9px\]{
   font-size: 9px;
 }
 
-.text-\[5px\]{
-  font-size: 5px;
-}
-
-.text-\[7px\]{
-  font-size: 7px;
+.text-\[10px\]{
+  font-size: 10px;
 }
 
 .text-white{
@@ -779,6 +846,20 @@ video {
 .text-indigo-950{
   --tw-text-opacity: 1;
   color: rgb(67 70 231 / var(--tw-text-opacity));
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
+.opacity-100{
+  opacity: 1;
+}
+
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .transition{
@@ -793,8 +874,16 @@ video {
   transition-delay: 300ms;
 }
 
+.duration-500{
+  transition-duration: 500ms;
+}
+
 .duration-300{
   transition-duration: 300ms;
+}
+
+.ease-in{
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .ease-in-out{
@@ -821,6 +910,14 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:static{
+    position: static;
+  }
+
+  .md\:z-auto{
+    z-index: auto;
+  }
+
   .md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
@@ -848,6 +945,10 @@ video {
 
   .md\:h-\[80px\]{
     height: 80px;
+  }
+
+  .md\:w-auto{
+    width: auto;
   }
 
   .md\:w-\[490px\]{
@@ -907,6 +1008,11 @@ video {
     padding-right: 8rem;
   }
 
+  .md\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .md\:px-\[118px\]{
     padding-left: 118px;
     padding-right: 118px;
@@ -945,6 +1051,10 @@ video {
   .md\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .md\:pl-0{
+    padding-left: 0px;
   }
 
   .md\:pl-14{
@@ -994,5 +1104,9 @@ video {
 
   .md\:leading-5{
     line-height: 1.25rem;
+  }
+
+  .md\:opacity-100{
+    opacity: 1;
   }
 }
