--- a/public/output.css
+++ b/public/output.css
@@ -515,29 +515,17 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute{
-  position: absolute;
-}
-
 .left-0{
   left: 0px;
-}
-
-.top-\[-400px\]{
-  top: -400px;
-}
-
-.top-\[80px\]{
-  top: 80px;
-}
-
-.z-\[-1\]{
-  z-index: -1;
 }
 
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .mb-5{
@@ -546,26 +534,6 @@ video {
 
 .mb-3{
   margin-bottom: 0.75rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
 }
 
 .block{
@@ -608,34 +576,8 @@ video {
   width: 4rem;
 }
 
-.w-\[200px\]{
-  width: 200px;
-}
-
-.w-\[220px\]{
-  width: 220px;
-}
-
-.w-fit{
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-auto{
-  width: auto;
-}
-
 .w-\[300px\]{
   width: 300px;
-}
-
-.w-\[250px\]{
-  width: 250px;
-}
-
-.max-w-fit{
-  max-width: -moz-fit-content;
-  max-width: fit-content;
 }
 
 .cursor-pointer{
@@ -670,6 +612,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-5{
+  gap: 1.25rem;
+}
+
 .gap-1{
   gap: 0.25rem;
 }
@@ -682,36 +628,24 @@ video {
   gap: 0.75rem;
 }
 
-.gap-5{
-  gap: 1.25rem;
-}
-
 .gap-2{
   gap: 0.5rem;
-}
-
-.gap-10{
-  gap: 2.5rem;
 }
 
 .text-ellipsis{
   text-overflow: ellipsis;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
-.rounded-2xl{
-  border-radius: 1rem;
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.rounded-2xl{
+  border-radius: 1rem;
 }
 
 .border-4{
@@ -740,9 +674,9 @@ video {
   border-color: rgb(18 18 18 / var(--tw-border-opacity));
 }
 
-.bg-white{
+.bg-indigo-1000{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(142 143 224 / var(--tw-bg-opacity));
 }
 
 .bg-indigo-950{
@@ -750,37 +684,18 @@ video {
   background-color: rgb(67 70 231 / var(--tw-bg-opacity));
 }
 
-.bg-indigo-1000{
-  --tw-bg-opacity: 1;
-  background-color: rgb(142 143 224 / var(--tw-bg-opacity));
-}
-
 .bg-neutral-1000{
   --tw-bg-opacity: 1;
   background-color: rgb(217 217 217 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(49 46 129 / var(--tw-bg-opacity));
 }
 
 .p-5{
   padding: 1.25rem;
 }
 
-.p-\[-400px\]{
-  padding: -400px;
-}
-
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 
 .py-4{
@@ -803,6 +718,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -818,18 +738,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.pl-7{
-  padding-left: 1.75rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
 
 .pl-3{
@@ -840,20 +750,20 @@ video {
   padding-top: 1.75rem;
 }
 
-.pr-8{
-  padding-right: 2rem;
+.pr-4{
+  padding-right: 1rem;
 }
 
 .pb-1{
   padding-bottom: 0.25rem;
 }
 
-.pt-10{
-  padding-top: 2.5rem;
-}
-
 .text-center{
   text-align: center;
+}
+
+.text-justify{
+  text-align: justify;
 }
 
 .font-body{
@@ -870,17 +780,17 @@ video {
   line-height: 1.5rem;
 }
 
-.text-\[9px\]{
-  font-size: 9px;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-\[10px\]{
   font-size: 10px;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-\[9px\]{
+  font-size: 9px;
 }
 
 .text-white{
@@ -891,14 +801,6 @@ video {
 .text-indigo-950{
   --tw-text-opacity: 1;
   color: rgb(67 70 231 / var(--tw-text-opacity));
-}
-
-.opacity-0{
-  opacity: 0;
-}
-
-.opacity-100{
-  opacity: 1;
 }
 
 .transition-all{
@@ -955,14 +857,6 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:static{
-    position: static;
-  }
-
-  .md\:z-auto{
-    z-index: auto;
-  }
-
   .md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
@@ -996,16 +890,16 @@ video {
     height: 80px;
   }
 
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
   .md\:w-auto{
     width: auto;
   }
 
   .md\:w-\[490px\]{
     width: 490px;
-  }
-
-  .md\:w-1\/2{
-    width: 50%;
   }
 
   .md\:w-\[150px\]{
@@ -1115,13 +1009,17 @@ video {
     padding-left: 3.5rem;
   }
 
-  .md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .md\:pr-8{
+    padding-right: 2rem;
   }
 
   .md\:text-\[40px\]{
     font-size: 40px;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .md\:text-sm{
@@ -1134,6 +1032,11 @@ video {
     line-height: 2.5rem;
   }
 
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .md\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
@@ -1142,25 +1045,6 @@ video {
   .md\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .md\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-\[19px\]{
-    font-size: 19px;
   }
 
   .md\:font-semibold{
@@ -1177,13 +1061,5 @@ video {
 
   .md\:leading-5{
     line-height: 1.25rem;
-  }
-
-  .md\:text-\[1\]{
-    color: 1;
-  }
-
-  .md\:opacity-100{
-    opacity: 1;
   }
 }
